--- a/hashicups-demo/k8s-vault-cert-mgr/frontend.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/frontend.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: hashicups
   name: frontend
   labels:
     app: frontend
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
@@ -15,19 +16,14 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: hashicups
   name: frontend
 automountServiceAccountToken: true
----
-apiVersion: consul.hashicorp.com/v1alpha1
-kind: ServiceDefaults
-metadata:
-  name: frontend
-spec:
-  protocol: "http"
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: hashicups
   name: nginx-configmap
 data:
   config: |
@@ -64,6 +60,7 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: hashicups
   name: frontend
 spec:
   replicas: 1
