--- a/hashicups-demo/k8s-vault-cert-mgr/payments.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/payments.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: hashicups
   name: payments
 spec:
   selector:
@@ -15,19 +16,14 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: hashicups
   name: payments
 automountServiceAccountToken: true
----
-apiVersion: consul.hashicorp.com/v1alpha1
-kind: ServiceDefaults
-metadata:
-  name: payments
-spec:
-  protocol: "http"
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: hashicups
   name: payments
   labels:
     app: payments
