--- a/hashicups-demo/k8s-vault-cert-mgr/products-api.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/products-api.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: hashicups
   name: products-api
 spec:
   selector:
@@ -15,6 +16,7 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: hashicups
   name: products-api
 automountServiceAccountToken: true
 # ---
@@ -40,6 +42,7 @@ automountServiceAccountToken: true
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: hashicups
   name: products-api
   labels:
     app: products-api
