--- a/hashicups-demo/k8s-vault-cert-mgr/products-db.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/products-db.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: hashicups
   name: postgres
   labels:
     app: postgres
@@ -16,12 +17,14 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: hashicups
   name: postgres
 automountServiceAccountToken: true
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: hashicups
   name: postgres
 spec:
   replicas: 1
@@ -77,7 +80,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: role-tokenreview-binding
-  namespace: default
+  namespace: hashicups
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -85,4 +88,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: vault-auth
-    namespace: default
+    namespace: hashicups
