--- a/hashicups-demo/k8s-vault-cert-mgr/public-api.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/public-api.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: hashicups
   name: public-api
   labels:
     app: public-api
@@ -15,6 +16,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: hashicups
   name: public-api
 spec:
   replicas: 1
