--- a/hashicups-demo/k8s-vault-cert-mgr/public-ssl-hashicups.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/public-ssl-hashicups.yaml
@@ -7,17 +7,17 @@ metadata:
   annotations:
     # kubernetes.io/ingress.class: nginx
     # add an annotation indicating the issuer to use.
-    cert-manager.io/cluster-issuer: vault-issuer
-    cert-manager.io/common-name: hashicups.yulei.aws.hashidemos.io
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/common-name: hashicups.yulei.gcp.hashidemos.io
 spec:
   ingressClassName: nginx
   tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
     - hosts:
-      - hashicups.yulei.aws.hashidemos.io
+      - hashicups.yulei.gcp.hashidemos.io
       # - devopsdays-vault.yulei.aws.hashidemos.io
       secretName: hashicups-cert # < cert-manager will store the created certificate in this secret.
   rules:
-  - host: hashicups.yulei.aws.hashidemos.io
+  - host: hashicups.yulei.gcp.hashidemos.io
     http:
       paths:
       - pathType: Prefix
