--- a/hashicups-demo/k8s-vault-cert-mgr/private-ssl-vault.yaml
+++ b/hashicups-demo/k8s-vault-cert-mgr/private-ssl-vault.yaml
@@ -5,16 +5,13 @@ metadata:
   name: ingress
   namespace: vault
   annotations:
-    # kubernetes.io/ingress.class: nginx
-    # add an annotation indicating the issuer to use.
     cert-manager.io/cluster-issuer: vault-issuer
     cert-manager.io/common-name: vault.yulei.gcp.hashidemos.io
 spec:
   ingressClassName: nginx
   tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
     - hosts:
-      - vault.yulei.gcp.hashidemos.io
-      # - devopsdays-vault.yulei.aws.hashidemos.io
+      - vault.yulei.aws.hashidemos.io # for demo purposes we have setup a SAN.
       secretName: vault-cert # < cert-manager will store the created certificate in this secret.
   rules:
   - host: vault.yulei.gcp.hashidemos.io
@@ -27,14 +24,4 @@ spec:
             name: vault-ui
             port:
               number: 8200
-  # - host: devopsdays-vault.yulei.aws.hashidemos.io
-  #   http:
-  #     paths:
-  #     - pathType: Prefix
-  #       path: /
-  #       backend:
-  #         service:
-  #           name: vault-ui
-  #           port:
-  #             number: 8200
 ...
